fix: update metadata

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Aprenda verbos em português!" />
+    <meta
+      name="description"
+      content="Aprenda verbos em português com exercícios simples e definições fáceis de entender."
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>
-      Aprenda verbos em português com exercícios simples e definições fáceis de
-      entender.
-    </title>
+    <title>Aprenda verbos em português!</title>
   </head>
   <body>
     <noscript
